# stereo_transformation_pipeline

./: .gitignore  .img_inspector.cpp.swp  CMakeLists.txt  README.md  fov_extractor.cpp  gt_extractor.py  img_inspector.cpp  launch_extractor.sh  launch_inspector.sh
extra_files/: 00002.pgm  frontcam-calibration.yaml  r00002.pgm
output/: frontcam-calibration_512x512_rectified.yaml
output/left/: 00000.pgm
output/right/: 00000.pgm
